<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSearch"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonSave"
                android:layout_width="78dp"
                android:layout_height="94dp"
                android:layout_marginStart="134dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonDelete"
                app:layout_constraintTop_toBottomOf="@+id/loose"
                app:srcCompat="@drawable/guardar"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/buttonDelete"
                android:layout_width="78dp"
                android:layout_height="94dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loose"
                app:srcCompat="@drawable/borrar"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/buttonDeleteImage"
                android:layout_width="78dp"
                android:layout_height="94dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="55dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/addImage"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/eliminar_imagen"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/addImage"
                android:layout_width="104dp"
                android:layout_height="118dp"
                android:layout_marginStart="43dp"
                android:layout_marginTop="50dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageFish"
                android:layout_width="58dp"
                android:layout_height="59dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="74dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCalendar"
                app:srcCompat="@drawable/carpa"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageFisher"
                android:layout_width="59dp"
                android:layout_height="58dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFishingNet"
                app:srcCompat="@drawable/pescador"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageFishingNet"
                android:layout_width="59dp"
                android:layout_height="58dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageWeight"
                app:srcCompat="@drawable/red_de_pescar"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@drawable/red_de_pescar" />

            <ImageView
                android:id="@+id/imageWeight"
                android:layout_width="59dp"
                android:layout_height="58dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSex"
                app:srcCompat="@drawable/peso"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageInformation"
                android:layout_width="59dp"
                android:layout_height="58dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="70dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFisher"
                app:srcCompat="@drawable/informacion"
                tools:ignore="MissingConstraints" />

            <Switch
                android:id="@+id/loose"
                android:layout_width="221dp"
                android:layout_height="58dp"
                android:layout_marginStart="103dp"
                android:layout_marginTop="900dp"
                android:text="Suelta"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addImage"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/informationTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageInformation"
                app:layout_constraintTop_toBottomOf="@+id/fisherTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/informationTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="Información"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fisherTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageFisher"
                app:layout_constraintTop_toBottomOf="@+id/capturesTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fisherTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="Pescador"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/capturesTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageFishingNet"
                app:layout_constraintTop_toBottomOf="@+id/weightTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/capturesTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="Nº de Capturas"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageWeight"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSex">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="Peso"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fishTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageFish"
                app:layout_constraintTop_toBottomOf="@+id/dateTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fishTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="Tipo de pez"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTIL"
                android:layout_width="240dp"
                android:layout_height="85dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonDeleteImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateTE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aerolite"
                    android:hint="dd/mm/yy"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerSex"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fishTIL" />

            <ImageButton
                android:id="@+id/buttonCalendar"
                android:layout_width="58dp"
                android:layout_height="59dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addImage"
                app:srcCompat="@drawable/calendario" />

            <ImageButton
                android:id="@+id/addSex"
                android:layout_width="58dp"
                android:layout_height="59dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFish"
                app:srcCompat="@drawable/sexo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>