...
    <string name="error_weight2">Error, campo vacío</string>
    <string name="error_captures2">Error, campo vacío</string>
    <string name="error_fisher2">Error, campo vacío</string>
    <string name="error_information2">Error, campo vacío</string>
    <string name="addSex">Añade un sexo nuevo</string>
    <string name="insertSex">Inserta nuevo sexo</string>
    <string name="insert">Insertar</string>
    <string name="addCorrect">Se ha añadido</string>
    <string name="cancel">Cancelar</string>
    <string name="contac">Contacto: andreadiaztorres069@gmail.com</string>
    <string name="developer">Desarrollador: Andrea Díaz Torres</string>
    <string name="selectImage">Selecciona la imagen que deseas</string>
    <string name="permissionDenied">Permiso denegado</string>
...
